<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.QuestionsFragment">

    <TextView
        android:id="@+id/questionCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="56dp"

        android:text="@string/question_number"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/questionsTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionsTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="15sp"
        android:text="@string/question_1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<RadioGroup
    android:id="@+id/rg1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/questionsTv"
    android:layout_marginTop="5dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:padding="20dp">

    <RadioButton
        android:id="@+id/rb1"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        />
    <RadioButton
        android:id="@+id/rb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    <RadioButton
        android:id="@+id/rb3"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <RadioButton
        android:id="@+id/rb4"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</RadioGroup>

    <Button
        android:id="@+id/nextBt"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:padding="10sp"
        android:text="@string/next"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg1"
        app:layout_constraintVertical_bias="0.080" />

    <Button
        android:id="@+id/submitBt"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:padding="10sp"
        android:text="@string/submit"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg1"
        app:layout_constraintVertical_bias="0.080" />

    <Button
        android:id="@+id/checkResultsBt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:padding="10sp"
        android:text="@string/check_results"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submitBt"
        app:layout_constraintVertical_bias="0.500" />

</androidx.constraintlayout.widget.ConstraintLayout>